tests/pre_push/policy/snapshots/pre_push__policy__unmanaged__explicit_unmanaged_returns.snap
---
source: tests/pre_push/policy/unmanaged.rs
expression: content
---
EXIT_CODE: 0

STDOUT:
(empty)

STDERR:
[gherrit] Branch explicit-unmanaged is UNMANAGED. Allowing standard push.
