tests/pre_push/policy/snapshots/pre_push__policy__unmanaged__implicit_management_requires_choice.snap
---
source: tests/pre_push/policy/unmanaged.rs
expression: content
---
EXIT_CODE: 1

STDOUT:
(empty)

STDERR:
[gherrit] [ERROR] It is unclear whether branch 'implicit-unmanaged' should be managed by GHerrit.
[gherrit] [ERROR] Run 'gherrit manage' to configure it as a GHerrit stack.
[gherrit] [ERROR] Run 'gherrit unmanage' to push it as a standard Git branch.
